@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020201213"
-#define public MagickPackageReleaseDate "snapshot-20201213"
+#define public MagickPackageVersionAddendum ".020201214"
+#define public MagickPackageReleaseDate "snapshot-20201214"
