@@ -35,6 +35,15 @@
 <div class="document">
 
 
+<p>2020-12-14  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>magick/paint.c (OpaqueImage): Assure that image type is promoted
+as required based on fill color.  Fixes unexpected results
+discovered by Stuart McDonagh and reported via the
+graphicsmagick-help mailing list on December 14, 2020.</li>
+</ul>
+</blockquote>
 <p>2020-12-13  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
